[gd_scene load_steps=5 format=3 uid="uid://d3a5qqp1irmbo"]

[ext_resource type="Script" path="res://aisles/bosses/carrot/carrot_projectile.gd" id="1_61l61"]
[ext_resource type="Texture2D" uid="uid://vr1wj6rsiyae" path="res://aisles/bosses/carrot/art/carrot_projectile.png" id="1_uhev7"]
[ext_resource type="Texture2D" uid="uid://vc65xy6vs34a" path="res://aisles/bosses/carrot/art/carrotwarning.png" id="3_fh1dv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3lqla"]
radius = 5.0
height = 26.0

[node name="CarrotProjectile" type="Area2D"]
collision_layer = 16
collision_mask = 8
script = ExtResource("1_61l61")
speed = 500

[node name="Projectile" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_uhev7")

[node name="Warning" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("3_fh1dv")
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://aisles/bosses/carrot/art",
"o_name": "",
"only_visible": false,
"player": "",
"slice": "",
"source": "C:/Users/edibl/BentoWorks/CleanupOnAisleTwenty/aseprite assets/carrotboss/carrotwarning.aseprite"
}
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "206e1f359bb528eae011915cb39b5064"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_3lqla")
disabled = true

[node name="StartTime" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="LifeTime" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="TrailTimer" type="Timer" parent="."]
wait_time = 0.12

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="StartTime" to="." method="_on_start_time_timeout"]
[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TrailTimer" to="." method="_on_trail_timer_timeout"]
